added page for liked videos as well as the card components for the liked dir

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -35,7 +35,7 @@
     ".next/types/**/*.ts",
     "components/cover/Cover.tsx",
     "app/page.tsx" // Fixed placement
-  ],
+, "components/cover/Login.js"  ],
   "exclude": [
     "node_modules"
   ]
