--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -15,6 +15,8 @@ Flask-RESTful==0.3.10
 Flask-SocketIO==5.5.1
 Flask-SQLAlchemy==3.1.1
 Flask-Uploads==0.2.1
+Flask-Migrate==4.0.5
+
 greenlet==3.1.1
 gunicorn==23.0.0
 h11==0.14.0
