--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -16,7 +16,6 @@ Flask-SocketIO==5.5.1
 Flask-SQLAlchemy==3.1.1
 Flask-Uploads==0.2.1
 Flask-Migrate==4.0.5
-
 greenlet==3.1.1
 gunicorn==23.0.0
 h11==0.14.0
@@ -45,3 +44,5 @@ typing_extensions==4.12.2
 urllib3==2.3.0
 Werkzeug==3.1.3
 wsproto==1.2.0
+PyJWT==2.8.0
+
