--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -26,7 +26,9 @@ itsdangerous==2.2.0
 Jinja2==3.1.5
 MarkupSafe==3.0.2
 moviepy==2.1.1
-numpy==2.2.1
+#numpy==2.2.1
+numpy==1.24.4
+
 packaging==24.2
 pillow==10.4.0
 proglog==0.1.10
@@ -45,7 +47,7 @@ urllib3==2.3.0
 Werkzeug==3.1.3
 wsproto==1.2.0
 PyJWT==2.8.0
-opencv-python-headless==4.9.0.80
+opencv-python-headless==4.7.0.72
 
 
 
