--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,3 +1,5 @@
+setuptools>=42
+wheel
 aniso8601==9.0.1
 bcrypt==4.2.1
 bidict==0.23.1
@@ -28,7 +30,6 @@ MarkupSafe==3.0.2
 moviepy==2.1.1
 #numpy==2.2.1
 numpy==1.24.4
-
 packaging==24.2
 pillow==10.4.0
 proglog==0.1.10
@@ -48,6 +49,7 @@ Werkzeug==3.1.3
 wsproto==1.2.0
 PyJWT==2.8.0
 opencv-python-headless==4.7.0.72
+
 
 
 
