--- a/render.yaml
+++ b/render.yaml
@@ -4,7 +4,8 @@ services:
     env: python
     plan: free
     buildCommand: pip install -r requirements.txt
-    startCommand: gunicorn app:app
+    startCommand: gunicorn app:app --bind 0.0.0.0:$PORT
+
     rootDir: backend
     envVars:
       - key: PYTHON_VERSION
